# btsnoop-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
btsnoop/: Cargo.toml
btsnoop-extcap/: Cargo.toml  README.md  create_debug_extcap.sh
btsnoop-extcap/src/: adb.rs  main.rs
btsnoop-extcap/tests/: cli.rs
src/: lib.rs
tests/: readme_test.rs
