[package]
name = "btsnoop-extcap"
version = "0.1.2"
edition = "2021"
authors = ["Maurice Lam <mauriceprograms@gmail.com>"]
description = "View Android's btsnoop logs (Bluetooth HCI logs) in Wireshark"
documentation = "https://docs.rs/btsnoop-extcap"
readme = "README.md"
repository = "https://github.com/mauricelam/btsnoop-rs/"
license = "MIT"
keywords = ["bluetooth", "btsnoop", "extcap", "wireshark"]
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r-extcap = { version = "0.2.2" }
btsnoop = { version = "0.2.0", path = "../btsnoop" }
pcap-file-tokio = "0.1.0"
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
nom-derive = "0.10.1"
nom = "7.1.3"
regex = "1.8.4"
tokio = { version = "1.28.2", features = ["full"] }
log = { version = "0.4.19", features = ["max_level_debug", "release_max_level_info"] }
async-trait = "0.1.68"
thiserror = "1.0.40"
lazy_static = "1.4.0"
shlex = "1.1.0"
which = "4.4.0"
dirs-next = "2.0.0"
log4rs = { version = "1.2.0" }

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
indoc = "2.0.1"
predicates = "3.0.3"
nix = "0.26.2"
wait-timeout = "0.2.0"
